<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp"
        tools:layout_editor_absoluteX="100%"
        tools:layout_editor_absoluteY="100%">

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/nama" />

        <EditText
            android:id="@+id/upah"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/upah"
            android:inputType="number" />

        <Spinner
            android:id="@+id/risk"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:entries="@array/resiko" />

        <Button
            android:id="@+id/input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/tambah" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nama"
            android:id="@+id/tNama"
            android:layout_marginTop="10dp"
            android:textSize="10pt"
            android:textAlignment="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/upah"
            android:id="@+id/tUpah"
            android:layout_marginTop="10dp"
            android:textSize="10pt"
            android:textAlignment="center"/>
<androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/myrect"
    app:cardElevation="8dp"
    app:contentPadding="5dp"
    android:layout_margin="10dp"
    app:cardCornerRadius="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginBottom="5dp"
                android:text="@string/jht"
                android:textStyle="bold"
                android:textSize="8pt"
                android:layout_marginLeft="5dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/pekerja"
                    android:textSize="8pt"
                    android:textStyle="bold"/>
                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/JHTP"
                    android:text="@string/pekerja"
                    android:textStyle="bold"
                    android:textSize="8pt"
                    android:layout_marginLeft="5dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/perusahaan"
                    android:textSize="8pt"
                    android:textStyle="bold"/>
                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/JHTC"
                    android:text="@string/perusahaan"
                    android:textStyle="bold"
                    android:textSize="8pt"
                    android:layout_marginLeft="5dp"/>
            </LinearLayout>
        </LinearLayout>
</androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/myrect"
            app:cardElevation="8dp"
            app:contentPadding="5dp"
            android:layout_margin="10dp"
            app:cardCornerRadius="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/jkk"
            android:layout_marginBottom="5dp"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="8pt"
            android:layout_marginLeft="5dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/perusahaan"
                android:textSize="8pt"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:id="@+id/JKK"
                android:text="@string/perusahaan"
                android:textStyle="bold"
                android:textSize="8pt"
                android:layout_marginLeft="5dp"/>
        </LinearLayout>
    </LinearLayout>

        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/myrect"
            app:cardElevation="8dp"
            app:contentPadding="5dp"
            android:layout_margin="10dp"
            app:cardCornerRadius="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/jkm"
                android:layout_marginBottom="5dp"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="8pt"
                android:layout_marginLeft="5dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/perusahaan"
                    android:textSize="8pt"
                    android:textStyle="bold"/>
                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/JKM"
                    android:text="@string/perusahaan"
                    android:textStyle="bold"
                    android:textSize="8pt"
                    android:layout_marginLeft="5dp"/>
            </LinearLayout>
        </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/myrect"
            app:cardElevation="8dp"
            app:contentPadding="5dp"
            android:layout_margin="10dp"
            app:cardCornerRadius="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/jp"
                android:layout_marginBottom="5dp"
                android:textStyle="bold"
                android:gravity="center"
                android:textSize="8pt"
                android:layout_marginLeft="5dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/pekerja"
                    android:textSize="8pt"
                    android:textStyle="bold"/>
                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/JPP"
                    android:text="@string/pekerja"
                    android:textStyle="bold"
                    android:textSize="8pt"
                    android:layout_marginLeft="5dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/perusahaan"
                    android:textSize="8pt"
                    android:textStyle="bold"/>
                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/JPC"
                    android:text="@string/perusahaan"
                    android:textStyle="bold"
                    android:textSize="8pt"
                    android:layout_marginLeft="5dp"/>
            </LinearLayout>
        </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/myrect"
            app:cardElevation="8dp"
            app:contentPadding="5dp"
            android:layout_margin="10dp"
            app:cardCornerRadius="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/total"
                    android:textStyle="bold"
                    android:textSize="8pt"
                    android:layout_marginLeft="5dp"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:text="@string/pekerja"
                        android:textSize="8pt"
                        android:textStyle="bold"/>
                    <TextView
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/TOTALC"
                        android:text="@string/pekerja"
                        android:textStyle="bold"
                        android:textSize="8pt"
                        android:layout_marginLeft="5dp"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:text="@string/perusahaan"
                        android:textSize="8pt"
                        android:textStyle="bold"/>
                    <TextView
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/TOTALP"
                        android:text="@string/perusahaan"
                        android:textStyle="bold"
                        android:textSize="8pt"
                        android:layout_marginLeft="5dp"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>